cmake_minimum_required(VERSION 3.6)
include(core/CMake/LFLOS.cmake)

set(LFL_IOS_TEAM 9S723G94YQ) 
set(LFL_IOS_CERT iPhone Developer: Justin Foutts \(V4GBVLYU5A\)) 
set(LFL_IOS_PROVISION_NAME "LFL Dev") 
#set(LFL_IOS_CERT iPhone Distribution: Lucid Fusion Labs, LLC \(9S723G94YQ\)) 
#set(LFL_IOS_PROVISION_NAME "LTerminal Distribution")

set(LFL_FLATBUFFERS 1)
set(LFL_PNG 1)
set(LFL_SQLCIPHER 1)
set(LFL_HOCKEYAPP 1)
set(LFL_REF10EXTRACT 1)
set(LFL_OPENSSL 1)
set(LFL_ICONV 1)
set(LFL_AUDIOUNIT 1)
set(LFL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(LFL_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR})
set(LFL_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/core)
set(LFL_OS_CORE_BINARY_DIR ${CMAKE_CURRENT_BINARY_DIR}/../${LFL_OS}/core)
set(ADMOB_OPTIONS "-F${CMAKE_CURRENT_SOURCE_DIR}/Pods/Google-Mobile-Ads-SDK/Frameworks/frameworks")
set(ADMOB_LIBS    "-F${CMAKE_CURRENT_SOURCE_DIR}/Pods/Google-Mobile-Ads-SDK/Frameworks/frameworks")

include(core/CMake/LFLCore.cmake)
add_subdirectory(term)
